--- a/pages/bcsrif/BCSRIF_2019_136.qmd
+++ b/pages/bcsrif/BCSRIF_2019_136.qmd
@@ -12,7 +12,7 @@ toc: true
 **Partners:** Pacific Salmon Foundation  
 **Agreement Period:** September 13, 4293080 to April 21, 4602258  
 **Organization:** Pacific Salmon Foundation  
-**Session(s):** Hatcheries  
+**Session(s):** Hatchery Fitness And Genetics  
 **Presentation Date(s):** December 11, 2025  
 **Speakers:** Samantha James  
 **Abstract:**  
