--- a/pages/bcsrif/BCSRIF_2020_239.qmd
+++ b/pages/bcsrif/BCSRIF_2020_239.qmd
@@ -12,7 +12,7 @@ toc: true
 **Partners:** None listed  
 **Agreement Period:** August 03, 4429809 to June 29, 4688837  
 **Organization:** University of Victoria, Department of Biology  
-**Session(s):** Hatcheries  
+**Session(s):** Hatchery Fitness And Genetics  
 **Presentation Date(s):** December 11, 2025  
 **Speakers:** Francis Juanes  
 **Abstract:**  
