--- a/pages/bcsrif/BCSRIF_2020_311.qmd
+++ b/pages/bcsrif/BCSRIF_2020_311.qmd
@@ -12,7 +12,7 @@ toc: true
 **Partners:** None listed  
 **Agreement Period:** August 03, 4429809 to June 29, 4688837  
 **Organization:** BC Centre for Aquatic Health Sciences Society  
-**Session(s):** Salmon Health  
+**Session(s):** Fish Health  
 **Presentation Date(s):** December 11, 2025  
 **Speakers:** Ahmed Siah  
 **Abstract:**  
