--- a/pages/pssi/2397.qmd
+++ b/pages/pssi/2397.qmd
@@ -10,7 +10,7 @@ toc: true
 **Division:** Stock Assessment and Research (StAR)  
 **Section:** Quantitative Assessment Methods  
 **Organization:** Nuu-Chah-Nulth Tribal Council  
-**Session(s):** Follow The Fish  
+**Session(s):** Follow The Fish Life Cycle Monitoring And Assessment  
 **Presentation Date(s):** December 04, 2025  
 **Speakers:** Jared Dick, Carrie Holt  
 **Abstract:**  
