--- a/pages/pssi/2407.qmd
+++ b/pages/pssi/2407.qmd
@@ -10,7 +10,7 @@ toc: true
 **Division:** Stock Assessment and Research (StAR)  
 **Section:** South Coast Area Salmon Stock Assessment  
 **Organization:** DFO  
-**Session(s):** Follow The Fish  
+**Session(s):** Follow The Fish Life Cycle Monitoring And Assessment  
 **Presentation Date(s):** December 04, 2025  
 **Speakers:** Jessy Bokvist  
 **Abstract:**  
