--- a/pages/pssi/2417.qmd
+++ b/pages/pssi/2417.qmd
@@ -10,7 +10,7 @@ toc: true
 **Division:** Ecosystem Sciences (ESD)  
 **Section:** Nearshore Ecosystems  
 **Organization:** DFO  
-**Session(s):** Salmon Health  
+**Session(s):** Fish Health  
 **Presentation Date(s):** December 11, 2025  
 **Speakers:** Erika Eliason  
 **Abstract:**  
