--- a/pages/pssi/2421.qmd
+++ b/pages/pssi/2421.qmd
@@ -10,7 +10,7 @@ toc: true
 **Division:** Ecosystem Sciences (ESD)  
 **Section:** Regional Ecosystems Effects on Fish and Fisheries  
 **Organization:** DFO  
-**Session(s):** Salmon Health  
+**Session(s):** Fish Health  
 **Presentation Date(s):** December 11, 2025  
 **Speakers:** Reid Williams  
 **Abstract:**  
