--- a/pages/pssi/2447.qmd
+++ b/pages/pssi/2447.qmd
@@ -10,7 +10,7 @@ toc: true
 **Division:** Aquatic Diagnostics, Genomics and Technology (ADGT)  
 **Section:** Molecular Genetics  
 **Organization:** DFO  
-**Session(s):** Follow The Fish  
+**Session(s):** Follow The Fish Life Cycle Monitoring And Assessment  
 **Presentation Date(s):** December 04, 2025  
 **Speakers:** Christoph Deeg, Arthur Bass  
 **Abstract:**  
