--- a/pages/pssi/3120.qmd
+++ b/pages/pssi/3120.qmd
@@ -10,7 +10,7 @@ toc: true
 **Division:** N/A  
 **Section:** Molecular Genetics  
 **Organization:** DFO  
-**Session(s):** Hatcheries  
+**Session(s):** Hatchery Fitness And Genetics  
 **Presentation Date(s):** December 11, 2025  
 **Speakers:** Eric Rondeau, Timothy Healy, Kyle Wellband  
 **Abstract:**  
