Updated project pages with confirmed filter, organization, and abstracts

--- a/index.qmd
+++ b/index.qmd
@@ -17,7 +17,7 @@ toc: false
 <tr>
 <td></td>
 <td><div class='calendar-cell'><strong>1</strong></div></td>
-<td><div class='calendar-cell'><strong>2</strong><br><div class='calendar-button' style='background-color:#007BFF'>Freshwater Stressors</div><div class='calendar-button' style='background-color:#007BFF'>Salmon In A Changing Climate</div></div></td>
+<td><div class='calendar-cell'><strong>2</strong><br><div class='calendar-button' style='background-color:#007BFF'>Salmon In A Changing Climate</div><div class='calendar-button' style='background-color:#007BFF'>Freshwater Stressors</div></div></td>
 <td><div class='calendar-cell'><strong>3</strong></div></td>
 <td><div class='calendar-cell'><strong>4</strong><br><div class='calendar-button' style='background-color:#007BFF'>Follow The Fish Life Cycle Monitoring And Assessment</div><div class='calendar-button' style='background-color:#007BFF'>Marine Stressors</div></div></td>
 <td><div class='calendar-cell'><strong>5</strong></div></td>
@@ -26,7 +26,7 @@ toc: false
 <tr>
 <td><div class='calendar-cell'><strong>7</strong></div></td>
 <td><div class='calendar-cell'><strong>8</strong></div></td>
-<td><div class='calendar-cell'><strong>9</strong><br><div class='calendar-button' style='background-color:#007BFF'>Data And Modelling To Support Decision Making</div><div class='calendar-button' style='background-color:#007BFF'>Fisheries Monitoring And Harvest Methods</div></div></td>
+<td><div class='calendar-cell'><strong>9</strong><br><div class='calendar-button' style='background-color:#007BFF'>Fisheries Monitoring And Harvest Methods</div><div class='calendar-button' style='background-color:#007BFF'>Data And Modelling To Support Decision Making</div></div></td>
 <td><div class='calendar-cell'><strong>10</strong></div></td>
 <td><div class='calendar-cell'><strong>11</strong><br><div class='calendar-button' style='background-color:#007BFF'>Hatchery Fitness And Genetics</div><div class='calendar-button' style='background-color:#007BFF'>Fish Health</div></div></td>
 <td><div class='calendar-cell'><strong>12</strong></div></td>
