--- a/pages/bcsrif/BCSRIF_2019_040-136D.qmd
+++ b/pages/bcsrif/BCSRIF_2019_040-136D.qmd
@@ -16,5 +16,5 @@ toc: true
 **Presentation Date(s):** December 04, 2025  
 **Speakers:** Samantha James  
 **Abstract:**  
-The recipient aims to validate Nanopore technology as a rapid and broad-range tool for detecting salmon pathogens from biological and environmental samples from hatcheries. The technology will be applied to screen broodstock examine pathogen sources and their distribution in hatchery systems and identify/characterize the agent(s) associated with disease occurrences.   
+The goal of this project is to determine the causes of vateritic otolith development (ear bones that have crystalized resulting in hearing loss) in hatchery-reared Strait of Georgia coho salmon to investigate the consequences for survival and in turn population recovery.   
 
